# mohio

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: CMakeLists.txt  main.cpp
apps/eval/: CMakeLists.txt  main.cpp
apps/ingest/: CMakeLists.txt  main.cpp
apps/scheduler/: CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
db/: provision_roles.sql  smoke_test.sh
db/migrations/: V001__orgs.sql  V002__users_and_auth.sql  V003__documents.sql  V004__wiki.sql  V005__chat.sql  V006__integrations.sql  V007__audit.sql  V008__redis_keys.md  V009__grant_validation.sql  V010__promotion_functions.sql  V011__deactivation_expiry_audit.sql  V012__move_org_unit.sql  V013__reactivate_user.sql  V014__sensitivity_sections_tombstones.sql  V015__outbox.sql  V016__usage_events.sql  V017__prompt_templates.sql  V018__feedback_signals.sql  V019__companies_region.sql  V020__retention_policy.sql  V021__chat_branching.sql  V022__wiki_lifecycle.sql  V023__shared_chat.sql  V024__access_history.sql  V025__wiki_tombstones.sql  V026__chat_turns_scope_gin.sql  V026__integrations_creds_check.sql  V026__resource_grant_cleanup.sql  V027__integrations_creds_check.sql  V028__chat_turns_scope_gin.sql  V029__outbox_backoff_and_ingest_resume.sql  V030__ingest_claim_token.sql  V031__partition_ensure_fn.sql  V032__acl_epoch_version_scope.sql
db/smoke_tests/: V019__companies_region.sh  V020__retention_policy.sh  V021__chat_branching.sh  V022__wiki_lifecycle.sh  V023__shared_chat.sh  V024__access_history.sh  V025__wiki_tombstones.sh  V026__chat_turns_scope_gin.sh  V026__integrations_creds_check.sh  V026__resource_grant_cleanup.sh  V027__integrations_creds_check.sh  V028__chat_turns_scope_gin.sh
docs/: arch_feedback_gpt.md  arch_feedback_opus.md  arch_feedback_sonnet.md  architecture.md  development_plan.md  feedback.md  iteration_2_design.md  iteration_2_design_feedback_opus.md  iteration_2_design_v1.md  review.md  review_feedback.md  review_feedback_v2.md
include/mohio/: access.hpp  auth.hpp  config.hpp  db.hpp  org_tree.hpp  redis.hpp
include/mohio/mcp/: tool.hpp
include/wikore/: access.hpp  access_resolver.hpp  auth.hpp  config.hpp  db.hpp  org_tree.hpp  redis.hpp
include/wikore/adapters/postgres/: error_mapper.hpp  error_mapper_internal.hpp  unit_of_work.hpp
include/wikore/application/: ingest_document_version.hpp  promote_document_version.hpp
include/wikore/domain/: types.hpp
include/wikore/domain/ports/: tracer.hpp
include/wikore/ingest/: chunker.hpp  document_repo.hpp  parser.hpp  types.hpp  worker.hpp
include/wikore/mcp/: tool.hpp
include/wikore/rag/: clearance.hpp  embedder.hpp  evidence_gate.hpp  qdrant_filter_builder.hpp  retrieval_orchestrator.hpp  types.hpp  vector_store.hpp
include/wikore/scheduler/: outbox_worker.hpp  partition_maintainer.hpp  polling_fallback.hpp  resync_worker.hpp
scripts/: test_integration_local.sh
scripts/corpus/: fetch.py  generate_negatives.py
src/: access.cpp  access_resolver.cpp  auth.cpp  db.cpp  redis.cpp
src/adapters/postgres/: error_mapper.cpp  unit_of_work.cpp
src/application/: ingest_document_version.cpp  promote_document_version.cpp
src/ingest/: chunker.cpp  document_repo.cpp  parser.cpp  types.cpp  worker.cpp
src/rag/: clearance.cpp  embedder.cpp  evidence_gate.cpp  qdrant_filter_builder.cpp  retrieval_orchestrator.cpp  retriever.cpp
src/scheduler/: outbox_worker.cpp  partition_maintainer.cpp  polling_fallback.cpp  resync_worker.cpp
tests/: CMakeLists.txt  test_access.cpp  test_access_resolver.cpp  test_chunker.cpp  test_clearance.cpp  test_embedder.cpp  test_error_mapper.cpp  test_evidence_gate.cpp  test_ingest_use_case.cpp  test_iter1_worker.cpp  test_org_tree.cpp  test_parser.cpp  test_partition_maintainer.cpp  test_promote_version.cpp  test_qdrant_filter_builder.cpp  test_resync_worker.cpp  test_retrieval_invariants.cpp  test_retrieval_orchestrator.cpp  test_vector_store.cpp
tests/fixtures/corpus/: .gitignore  README.md  negative_manifest.json  seed_manifest.json
tests/python/: test_corpus.py
